# deepseek_ocr_GUI

./: .env.example  .gitignore  CLAUDE.md
deepseek_ocr_desktop/: CHANGELOG_UV.md  DISTRIBUTION.md  GUI_LOGGING_GUIDE.md  LOGGING_GUIDE.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  VLLM_SETUP.md  build.bat  build.sh  deepseek_ocr.spec  pyproject.toml  requirements.txt  run.py  verify_setup.py
deepseek_ocr_desktop/src/: __init__.py  main.py
deepseek_ocr_desktop/src/core/: __init__.py  coordinate_parser.py  model_manager.py  ocr_processor.py  pdf_processor.py  prompt_builder.py  vllm_client.py
deepseek_ocr_desktop/src/resources/: __init__.py
deepseek_ocr_desktop/src/resources/styles/: app.qss
deepseek_ocr_desktop/src/ui/: __init__.py  main_window.py
deepseek_ocr_desktop/src/ui/dialogs/: __init__.py  model_loading_dialog.py  settings_dialog.py  startup_dialog.py
deepseek_ocr_desktop/src/ui/widgets/: __init__.py  advanced_settings_widget.py  bounding_box_canvas.py  image_upload_widget.py  log_viewer_widget.py  mode_selector_widget.py  pdf_processor_widget.py  result_viewer_widget.py
deepseek_ocr_desktop/src/utils/: __init__.py  config.py  logger.py  qt_log_handler.py
